small addition to page content

--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HELLO COURSERA</title>
+	<title>HELLO COURSERA !!!!!!!</title>
 </head>
 <body>
 <h1>hello</h1>
