--- a/mod-4sol/index.html
+++ b/mod-4sol/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <title>Module 4 Solution Starter
+ </title>
   <script src="script1.js"></script>
   <script src="script2.js"></script>
   <script src="app.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution Starter
+  </h1>
+  <h2>please check console by right clicking on inspect button and then console option in ">>"</h2>
 </body>
 </html>
